--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-md-7">
             <div class="home_intro">
               <h2>Hi, i'm Nur Khakim Rofiudin</h2>
-              <h1>UI/UX Designer & Front End Developer</h1>
+              <h1>Full Stack Web Developer | Associate Product Manager</h1>
               <p>
                 I'm from Brebes and I have been focus learning programming since
                 2020 when I'm studying in College and I'm also learning design
